进一步优化颜色选择框、将轮盘大小改为自动设置、亮度文字走统一资源调度

--- a/LibAAFResource/src/main/res/values/com_bihe0832_base_dialog_res.xml
+++ b/LibAAFResource/src/main/res/values/com_bihe0832_base_dialog_res.xml
@@ -22,11 +22,11 @@
     <string name="dialog_button_ok">确认</string>
     <string name="dialog_input_hint">输入完成后点击确认提交</string>
 
-    <string name="dialog_color_button_ok">使用颜色</string>
+    <string name="dialog_color_button_ok">使用当前值</string>
     <string name="dialog_color_button_reset">重置到初始值</string>
     <string name="dialog_color_title">当前颜色：</string>
     <string name="dialog_color_alpha_title">透明度：</string>
-    <string name="dialog_color_tips">上下滑动以浏览更多颜色设置选项</string>
-    <dimen name="dialog_color_pick_size">160dp</dimen>
+    <string name="dialog_color_depth_title">亮度：</string>
+    <string name="dialog_color_tips">上下滑动浏览更多颜色设置选项</string>
 
 </resources>
