资源整理，增加音视频转化的模块及对应调试代码

--- a/BaseDebug/src/main/res/drawable/test_selector.xml
+++ b/BaseDebug/src/main/res/drawable/test_selector.xml
@@ -17,6 +17,6 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_pause_fill" android:state_checked="false" />
-    <item android:drawable="@drawable/ic_start_fill" android:state_checked="true" />
+    <item android:drawable="@drawable/icon_pause_fill" android:state_checked="false" />
+    <item android:drawable="@drawable/icon_start_fill" android:state_checked="true" />
 </selector>
