--- a/CommonAbout/src/main/res/values/about_res.xml
+++ b/CommonAbout/src/main/res/values/about_res.xml
@@ -14,4 +14,6 @@
 
     <string name="contact_QQ_join_failed">未安装手Q或手Q版本过低，请手动添加</string>
 
+    <string name="clear_tips">缓存清理将为你清除 &lt;font color=\'#38ADFF\'&gt;各种缓存资源&lt;/font&gt;，清理期间请耐心等待，清理结束后会自动退出应用，是否开始清理？</string>
+
 </resources>
