--- a/BaseDebug/src/main/res/layout/activity_test_text.xml
+++ b/BaseDebug/src/main/res/layout/activity_test_text.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/common_toolbar"
-        style="@style/AAF.AppTheme.Toolbar.Light"
-        app:title="HTTP Request" />
+            android:id="@+id/common_toolbar"
+            style="@style/AAF.AppTheme.Toolbar.Light" />
 
 
     <TextView
-        android:id="@+id/result"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="32dp"
-        android:text="Result:"
-        android:background="@color/white"/>
+            android:id="@+id/result"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="32dp"
+            android:text="Result:"
+            android:background="@color/white" />
 
 </LinearLayout>
