--- a/LibAAFResource/src/main/res/values/com_bihe0832_base_toast_res.xml
+++ b/LibAAFResource/src/main/res/values/com_bihe0832_base_toast_res.xml
@@ -1,8 +1,11 @@
 <resources>
     <color name="bihe0832_common_toast_background_color">#DFDFDF</color>
+    <color name="bihe0832_common_toast_tips_background_color">#000000</color>
     <color name="bihe0832_common_toast_text_color">#212121</color>
+    <color name="bihe0832_common_toast_tips_text_color">#FFFFFF</color>
     <dimen name="bihe0832_common_toast_padding">5dp</dimen>
     <dimen name="bihe0832_common_toast_img_size">20dp</dimen>
+    <dimen name="bihe0832_common_toast_tips_img_size">42dp</dimen>
     <dimen name="bihe0832_common_toast_text_size">14dp</dimen>
     <dimen name="bihe0832_common_toast_text_margin">8dp</dimen>
     <dimen name="bihe0832_common_toast_y_offset">64dp</dimen>
