--- a/LibToast/src/main/res/layout/com_bihe0832_base_toast_tips.xml
+++ b/LibToast/src/main/res/layout/com_bihe0832_base_toast_tips.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/bihe0832_common_custom_toast_layout_id"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="32dp"
-    android:background="@drawable/com_bihe0832_base_toast_tips_corner"
-    android:gravity="center"
-    android:minWidth="108dp"
-    android:minHeight="108dp"
-    android:orientation="vertical"
-    android:padding="12dp"
-    tools:text="content">
-
-    <ImageView
-        android:id="@+id/bihe0832_common_toast_image"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:scaleType="centerInside"
-        tools:src="@mipmap/icon" />
-
-    <TextView
-        android:id="@+id/bihe0832_common_toast_text"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/bihe0832_common_custom_toast_layout_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/bihe0832_common_toast_text_color"
-        android:textSize="14dp"
-        tools:text="这是一个测试这是一个测试这是一个测试这是一个测试这是一个测试这是一个测试这是一个测试" />
+        android:layout_margin="32dp"
+        android:background="@drawable/com_bihe0832_base_toast_tips_corner"
+        android:gravity="center"
+        android:minWidth="224dp"
+        android:minHeight="108dp"
+        android:orientation="vertical"
+        tools:text="content">
+
+    <ImageView
+            android:id="@+id/bihe0832_common_toast_image"
+            android:layout_width="@dimen/bihe0832_common_toast_tips_img_size"
+            android:layout_height="@dimen/bihe0832_common_toast_tips_img_size"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:tint="@color/white"
+            tools:src="@mipmap/icon" />
+
+    <TextView
+            android:id="@+id/bihe0832_common_toast_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lineSpacingExtra="0.5mm"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/bihe0832_common_toast_tips_text_color"
+            android:gravity="center"
+            android:textSize="14dp"
+            tools:text="这是一个测试这是一个测试这是一试这是一个测试" />
 </LinearLayout>
