--- a/CommonCrop/src/main/res/layout/com_bihe_0832_android_common_crop_activity.xml
+++ b/CommonCrop/src/main/res/layout/com_bihe_0832_android_common_crop_activity.xml
@@ -6,54 +6,16 @@
         android:fitsSystemWindows="true"
         android:background="@color/black"
         android:layout_height="match_parent">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/crop_toolbar"
-            android:layout_width="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/colorPrimary"
-            android:layout_height="@dimen/com_bihe0832_tab_main_bottom_bar_height">
-
-        <ImageView
-                android:id="@+id/crop_back"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter"
-                android:layout_marginLeft="@dimen/crop_page_padding"
-                android:src="@drawable/ic_left_arrow"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
-
-
-        <ImageView
-                android:id="@+id/crop_done"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter"
-                android:layout_marginRight="@dimen/crop_page_padding"
-                android:src="@drawable/ic_done"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <ImageView
             android:id="@+id/image_view_logo"
             android:layout_width="@dimen/crop_default_logo_size"
             android:layout_height="@dimen/crop_default_logo_size"
             android:layout_gravity="center"
-            android:src="@mipmap/icon"
+            tools:src="@mipmap/icon"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/crop_toolbar"
-            app:layout_constraintBottom_toTopOf="@+id/wrapper_controls"
+            app:layout_constraintTop_toTopOf="@+id/ucrop"
+            app:layout_constraintBottom_toBottomOf="@+id/ucrop"
             app:tint="@color/crop_default_logo_color" />
 
     <com.bihe0832.android.common.crop.view.CropView
@@ -62,7 +24,7 @@
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/crop_toolbar"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/wrapper_controls"
             android:alpha="0" />
 
@@ -93,7 +55,7 @@
                     android:layout_height="28dp"
                     android:adjustViewBounds="true"
                     android:visibility="gone"
-                    android:tint="@color/colorPrimary"
+                    app:tint="@color/colorPrimary"
                     android:scaleType="centerInside"
                     android:src="@drawable/ic_close_fill"
                     app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +70,7 @@
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_angle"
                     android:visibility="gone"
-                    android:tint="@color/colorPrimary"
+                    app:tint="@color/colorPrimary"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent" />
@@ -175,5 +137,39 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/crop_toolbar"
+            android:layout_width="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="@dimen/com_bihe0832_tab_main_bottom_bar_height">
 
+        <ImageView
+                android:id="@+id/crop_back"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:layout_marginLeft="@dimen/crop_page_padding"
+                android:src="@drawable/ic_left_arrow"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+
+        <ImageView
+                android:id="@+id/crop_done"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:layout_marginRight="@dimen/crop_page_padding"
+                android:src="@drawable/ic_done"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
