移除 kotlin-android-extensions

--- a/Framework/src/main/res/layout/common_fragment_empty.xml
+++ b/Framework/src/main/res/layout/common_fragment_empty.xml
@@ -8,4 +8,4 @@
     android:padding="16dp"
     android:textColor="@color/textColorPrimary"
     android:textStyle="bold"
-    tools:text="dfsfd" />
+    tools:text="" />
