优化设置卡片，增加适配性

--- a/CommonAbout/src/main/res/layout/card_setting_switch.xml
+++ b/CommonAbout/src/main/res/layout/card_setting_switch.xml
@@ -19,9 +19,8 @@
                 android:id="@+id/settings_icon"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:scaleType="fitCenter"
+                android:scaleType="centerInside"
                 android:src="@drawable/icon_android"
-                app:tint="@color/textColorPrimary"
                 android:visibility="gone"
                 tools:visibility="visible"
                 android:layout_marginRight="8dp"
