截图支持拖动裁剪框后同步调整图像、二维码扫描优化、路由支持Fragment 的 onActivityResult

--- a/CommonCrop/src/main/res/values/com_bihe_0832_android_common_crop_attrs.xml
+++ b/CommonCrop/src/main/res/values/com_bihe_0832_android_common_crop_attrs.xml
@@ -10,6 +10,7 @@
         <attr name="show_oval_crop_frame" format="boolean" />
         <attr name="circle_dimmed_layer" format="boolean" />
         <attr name="dimmed_color" format="color" />
+        <attr name="dimmed_press_color" format="color" />
 
         <attr name="grid_stroke_size" format="dimension" />
         <attr name="grid_color" format="color" />
