修复下载回调丢失的bug，修复音频录制强制结束crash

--- a/BaseDebug/src/main/res/layout/activity_common_tab.xml
+++ b/BaseDebug/src/main/res/layout/activity_common_tab.xml
@@ -14,7 +14,7 @@
 
 
 
-        <androidx.viewpager.widget.ViewPager
+        <com.bihe0832.android.lib.ui.viewpager.NoScrollViewPager
             android:id="@+id/vp_2"
             android:layout_width="match_parent"
             android:layout_height="84dp"/>
