修复pcm转wav异常、wav播放异常，文件头部插入数据异常修复、本地音频查看优化，添加到commonDebug

--- a/CommonDebug/src/main/res/layout/card_audio_view.xml
+++ b/CommonDebug/src/main/res/layout/card_audio_view.xml
@@ -16,7 +16,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginLeft="6dp"
-            android:background="@color/transparent_background"
+            android:tint="@color/textColorPrimary"
             android:src="@drawable/icon_file_type_audio" />
 
     <TextView
