--- a/BaseDebug/src/main/res/values/dialog_test_res.xml
+++ b/BaseDebug/src/main/res/values/dialog_test_res.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="testDialog" parent="BaseDialog">
+    <style name="testDialog" parent="AAFBaseDialog">
         <item name="android:windowMinWidthMajor">55%</item>
         <item name="android:windowMinWidthMinor">80%</item>
     </style>
