--- a/Application/src/main/res/values/common_res.xml
+++ b/Application/src/main/res/values/common_res.xml
@@ -14,4 +14,8 @@
     <string name="theme_type_dark">暗夜模式</string>
     <string name="theme_change_confirm_message">改变主题不会自动保存当前文档, 确认放弃文档改变而改变主题?</string>
 
+
+    <string name="process_name_domain">:domain</string>
+
+
 </resources>
