--- a/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_item.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="wrap_content"
     android:background="@color/windowBackground"
     android:orientation="vertical">
 
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:textColor="@color/colorOnBackground"
