调试模块支持更多参数

--- a/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_item.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_item.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:lineHeight="24dp"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
         android:paddingLeft="16dp"
