--- a/LibDialog/src/main/res/layout/com_bihe0832_pop_menu_item.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_pop_menu_item.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,6 +22,7 @@
             android:layout_height="20dp"
             android:layout_marginRight="8dp"
             android:scaleType="centerInside"
+            app:tint="@color/com_bihe0832_pop_menu_text_color"
             tools:src="@mipmap/icon" />
 
         <TextView
