日志优化，增加落地H5日志，日志查看支持路由查看

--- a/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_content.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_content.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/log_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="6dp"
+    android:padding="4dp"
     android:background="@color/windowBackground"
-    android:orientation="vertical"
-    android:padding="4dp">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/log_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="2"
-        android:text="XX模块日志"
+        android:text="模块日志"
         android:textColor="@color/colorOnBackground"
         android:textSize="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/log_open"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,16 +28,17 @@
         android:id="@+id/log_open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_marginTop="4dp"
-        android:background="@drawable/common_button_bg_shape"
-        android:paddingLeft="8dp"
+        android:layout_centerVertical="true"
         android:paddingTop="6dp"
-        android:paddingRight="8dp"
         android:paddingBottom="6dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:background="@drawable/common_button_bg_shape"
         android:text="查看"
         android:textColor="@color/textColorSecondary"
         android:textSize="10dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/log_send"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,12 +49,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:background="@drawable/common_button_bg_shape"
-        android:paddingLeft="8dp"
         android:paddingTop="6dp"
-        android:paddingRight="8dp"
         android:paddingBottom="6dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:background="@drawable/common_button_bg_shape"
         android:text="发送"
+        android:visibility="gone"
         android:textColor="@color/textColorSecondary"
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/log_open"
