--- a/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_header.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_header.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorAccent"
     android:orientation="vertical"
     android:padding="12dp">
 
