优化日志展示细节

--- a/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_content.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_content.xml
@@ -11,14 +11,14 @@
 
     <TextView
         android:id="@+id/log_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="2"
         android:text="模块日志"
         android:textColor="@color/colorOnBackground"
-        android:textSize="12dp"
+        android:textSize="10dp"
         app:layout_constraintBottom_toTopOf="@+id/log_open"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
         android:background="@drawable/common_button_bg_shape"
         android:text="查看"
         android:textColor="@color/textColorSecondary"
-        android:textSize="10dp"
+        android:textSize="8dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/log_send"
@@ -57,7 +57,7 @@
         android:text="发送"
         android:visibility="gone"
         android:textColor="@color/textColorSecondary"
-        android:textSize="10dp"
+        android:textSize="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/log_open"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/log_open"
